syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service

message PropagateStateRequest {
  LedgerState state = 1;
}

message PropagateStateResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
}
